# strata

./: .gitignore  CLAUDE.md  CONTEXT_DIRECTOR.md  DEV.md  README.md  index.html  manifesto.md  package-lock.json  package.json  vite.config.ts
.speckit/: README.md
.speckit/architecture/: data-flow.md  ide-integration.md  pi-anatomy.md
.speckit/architecture/adr/: ADR-0001-fork-pi-vs-from-scratch.md  ADR-0002-strata-as-fork-app-not-extension.md  (+2 more)
.speckit/plans/: backlog.md  current.md  done.md  m05-screen-spec.md  m05-screens-m1.md  m05-screens-m2.md  m05-screens-m3.md
.speckit/product/: design-system.md  modes-spec.md  obsidian-note-spec.md  vision.md
.speckit/tracking/: bugfixes.md  decisions.md  patch-notes.md
design/: README.md  SKILL.md  colors_and_type.css
design/preview/: _screen-card.css  screen-active-conversation-mestre.html  screen-active-conversation-with-diff.html  screen-active-conversation-with-note-preview.html  screen-active-conversation-with-tool-call.html  screen-active-conversation.html  screen-branch-tree.html  screen-command-palette.html  screen-connection-lost.html  screen-empty-state.html  screen-fork-interaction.html  screen-mode-confirm-mestre-to-vereda.html  screen-mode-confirm-vereda-to-mestre.html  screen-settings.html  screen-streaming.html  screen-workspace-picker.html
src/: App.test.tsx  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/__tests__/: fonts.test.ts  ollama-client.test.ts  pi-session.test.ts  strata-types.test.ts  tokens.test.ts
src/styles/: tokens.css
(+36 files in other folders)
