[package]
name = "strata"
version = "0.0.1"
description = "Local-first coding companion that builds layers of understanding in your Obsidian vault. A Mora product."
authors = ["Mora <https://github.com/Mora-Org>"]
license = "MIT"
repository = "https://github.com/Mora-Org/strata"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "strata_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3" }
tauri-plugin-log = "2"
